# truesight

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  flake.nix
.sisyphus/notepads/truesight-mcp/: issues.md  learnings.md
tests/fixtures/csharp-fixture/: Program.cs  expected.json
tests/fixtures/csharp-fixture/Models/: User.cs
tests/fixtures/csharp-fixture/Services/: AuthService.cs
tests/fixtures/rust-fixture/: Cargo.toml  expected.json
tests/fixtures/rust-fixture/src/: lib.rs  utils.rs
tests/fixtures/ts-fixture/: expected.json  package.json
tests/fixtures/ts-fixture/src/: index.ts  utils.ts
truesight/: Cargo.toml  build.rs
truesight-core/: Cargo.toml
truesight-core/src/: error.rs  index.rs  language.rs  lib.rs  repomap.rs  search.rs  storage.rs  tests.rs
truesight-db/: Cargo.toml
truesight-db/src/: bookkeeping.rs  error.rs  helpers.rs  lib.rs  lifecycle.rs  rows.rs  schema.rs  search.rs  search_ops.rs  storage_impl.rs
truesight-db/src/tests/: bookkeeping.rs  lifecycle.rs  mod.rs  search.rs
truesight-engine/: Cargo.toml  build.rs
truesight-engine/src/: embed.rs  incremental.rs  indexer.rs  indexing.rs  lib.rs  parser.rs  repo_context.rs  repomap.rs  search.rs  search_tests.rs  walker.rs  walker_tests.rs
truesight-engine/src/embed/: assets.rs  encoding.rs  inference.rs  mod.rs
truesight-engine/src/incremental/: change_detection.rs  git.rs  mod.rs
truesight-engine/src/indexer/: components.rs  mod.rs  processing.rs
truesight-engine/src/parser/: csharp.rs  helpers.rs  mod.rs  rust.rs  typescript.rs
truesight-engine/src/repomap/: dependencies.rs  mod.rs  module_accumulator.rs  paths.rs
truesight-engine/tests/: indexing_convergence.rs
truesight-engine/tests/test_support/: git_fixture.rs  storage_fakes.rs
truesight/src/: app.rs  cli.rs  main.rs  mcp.rs
truesight/src/app/: mod.rs  output.rs  runtime.rs  tests.rs
truesight/src/app/snapshots/: truesight__app__tests__repomap_ts_fixture.snap
truesight/src/mcp/: mod.rs  types.rs
truesight/src/snapshots/: truesight__app__tests__repomap_csharp_fixture.snap  truesight__app__tests__repomap_rust_fixture.snap
truesight/tests/: cli_e2e.rs  mcp_protocol.rs  mcp_stdio_smoke.sh
truesight/tests/test_support/: git_fixture.rs
