[package]
name = "truesight-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
mocking = ["dep:mockall"]

[dependencies]
mockall = { version = "0.13", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
