[package]
name = "truesight"
version = "0.1.0"
edition = "2021"

[dependencies]
truesight-core = { path = "../truesight-core" }
truesight-engine = { path = "../truesight-engine" }
truesight-db = { path = "../truesight-db" }
clap = { version = "4", features = ["derive"] }
rmcp = { version = "1.2", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
insta = "1"
mockall = "0.13"
tempfile = "3"
